# app.js
@@ -38,17 +38,13 @@ router.get("/products", products.getAllProducts);
 router.get("/products/getProductsByFilter", products.getProductsByFilter);
 
 router.post("/products", products.createProduct);
+router.post("/products/checkout", products.checkout);
 
 router.put("/products", products.updateProduct);
 
 router.delete("/products/:id", products.deleteProduct);
 
 router.patch("/products/:id", products.modifyProduct);
-
-router.post("/products/email", (req, res) => {
-  sendPurchaseMail();
-  res.status(200).send("");
-});
 
 //*CATEGORIES
 router.get("/categories", category.getCategories);
